# StarFoxSNESRecomp

./: .gitignore  CMakeLists.txt  README.md  config.ini  snesrecomp.pin
docs/: REFERENCE_SOURCES.md
recomp/: bank00.cfg  bank01.cfg  bank02.cfg  bank03.cfg  bank1F.cfg  funcs.h
recomp/launcher/: boxart.tga  theme.rcss
src/: config.c  config.h  fiber_compat.c  fiber_compat.h  gen_stubs.c  glsl_shader.c  main.c  opengl.c  post_mortem.c  starfox_cpu_infra.c  starfox_rtl.c  starfox_rtl.h  starfox_spc_player.c  starfox_spc_player.h  variables.h
src/platform/win32/: volume_control.c
tools/: make_release.ps1  regen.sh
